# apvrp

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  R640-cpu.txt  README.md  README_cycle_cuts.md  apvrp.gdb  ascii_graph.txt  build.rs  convert-sol-log.gdb  debug.py  debug.sh  gdb_helpers.py  run_test_set.sh  rust-toolchain.toml  solution_which_caused_bad_cut.txt  solution_which_is_cut_off.txt
.cargo/: config.toml
data/: .gitignore  README.md  apvrp_meisel.tar.xz  apvrp_tilk.tar.xz  apvrp_tilk_b_part.tar.xz
data/group/: B  B100  B200  B25  BP  BP100  BP200  BP25  BP50  all  paper  test_BP  threads  tristan  very_hard
data/slurm/: create_resource_map.jq  levels.json  merge_mem.jq  merge_time.jq  update.sh
data/slurm/memory/: default.json  high.json  medium.json
data/slurm/time/: extreme.json  high.json  medium.json
params/: .gitignore  generate.sh  seeds.txt  slurm-resources.csv
params/templates/: 2p_minvi_pcvg.json  2p_minvi_pcvg_4t.json  2p_minvi_pvcg.json  2p_minvi_pvcg_1t.json  2p_minvi_pvcg_2t.json  2p_minvi_pvcg_3t.json  2p_minvi_pvcg_5t.json  2p_minvi_pvcg_6t.json  2p_vi_pvcg.json  2p_vie_pvcg.json  bl.json  bl_2p.json  bl_2p_minvi.json  debug-dag.json  debug-lp.json  debug.json  dropout_2p.json  dropout_cycle.json  dropout_fork.json  dropout_pvcg.json  extra_av_cuts.json  tristan-cp.json  tristan-mrs.json  tristan-mrspath.json  tristan-mrstree.json
params/test/: opt_cuts.json
pkgs/sawmill/src/: cover.rs  lib.rs  viz.rs
results/: README.md  aggregated.tar.xz  individual.tar.xz
sawmill/: Cargo.toml
sawmill/examples/: usage.rs
sawmill/src/: cover.rs  lib.rs  lift.rs  unordered_pair.rs  viz.rs
src/: colgen.rs  constants.rs  experiment.rs  graph.rs  lib.rs  logging.rs  model.rs  preprocess.rs  schedule.rs  sets.rs  solution.rs  stopwatch.rs  tasks.rs  test.rs  utils.rs
src/experiment/: mod.rs  slurm_job.sh  slurm_job_template.sh  slurm_job_test.sh  slurm_job_trace.sh  stopwatch.rs
src/model/: cb.rs  mod.rs  mp.rs  sp.rs  sp_graph.rs  sp_lp.rs
src/model/sp/: cuts.rs  dag.rs  inference.rs  lp.rs  mod.rs
src/tasks/: chain.rs  checks.rs  index_task.rs  mod.rs  shorthand.rs
tests/: .gitignore
tests/data/: mp-solutions.tar.xz  soln.tar.xz  subproblems.tar.xz
