[package]
name = "apvrp"
version = "0.1.0"
authors = ["yanni_rist <yanni555rist@gmail.com>"]
edition = "2018"
default-run="apvrp"

[dependencies]
anyhow = { version = "^1.0", features = ["backtrace"] }
grb = { path = "./grb"}
itertools = "^0.10"
instances = {path = "../instances"}
fnv = "^1.0"
serde = { version= "^1.0.123", features = ["derive"] }
serde_json = "^1.0.64"
tracing =  {version = "^0.1",  features = ["max_level_trace", "release_max_level_off"]}
tracing-subscriber = { version = "^0.2", features = ["json"] }
tracing-appender = "^0.1"
variant_count = "^1.1"
prettytable-rs = "^0.8"
slurm-harray = { path = "./slurm-utils-rs" }
smallvec = "^1.6.1"
regex = "^1.5.4"
clap = "^2.33.3"
lazy_static = "^1.4"
dot = "^0.1"
daggylp = { path = "./daggylp", features = ["arrayvec", "viz-extra"] }
arrayvec = "^0.7"
structopt = "^0.3"
glob = "^0.3"

[build-dependencies]
anyhow = { version = "^1.0", features = ["backtrace"] }

[[bin]]
name = "apvrp"
path = "src/bin/main.rs"

[[bin]]
name = "sol-viz"
path = "src/bin/sol-viz.rs"
