[package]
name = "apvrp"
version = "0.1.0"
authors = ["yanni_rist <yanni555rist@gmail.com>"]
edition = "2018"
default-run="apvrp"

[dependencies]
anyhow = { version = "^1.0", features = ["backtrace"] }
itertools = "^0.10"
fnv = "^1.0"
serde = { version= "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing =  {version = "^0.1",  features = ["max_level_trace", "release_max_level_off"]}
tracing-subscriber = { version = "^0.3", features = ["json", "env-filter"] }
tracing-subscriber-serde = { git = "ssh://git@bitbucket.org/yannik_rist/tracing-subscriber-json-full.git", features = ["messagepack"]}
variant_count = "^1.1"
prettytable-rs = "^0.8"
indicatif = "0.16.2"
smallvec = { version = "^1.6", features = ["serde"] }
regex = "^1.5"
clap = "^2.33"
lazy_static = "^1.4"
dot = "^0.1"
arrayvec = "^0.7"
structopt = "^0.3"
glob = "^0.3"
grb = { path = "./pkgs/grb"}
instances = {path = "./pkgs/instances"}
slurm-harray = { path = "./pkgs/slurm-utils-rs" }
daggylp = { path = "./pkgs/daggylp", features = ["arrayvec", "viz-extra"] }
sawmill = { path = "./pkgs/sawmill" }



[build-dependencies]
anyhow = { version = "^1.0", features = ["backtrace"] }

[[bin]]
name = "apvrp"
path = "src/bin/main.rs"
