[package]
name = "sawmill"
version = "0.1.0"
authors = ["yanni_rist <yanni555rist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
dot = { version = "0.1.4"}
gvdot = { path = "../gvdot" }
tracing =  {version = "^0.1",  features = ["max_level_trace", "release_max_level_off"]}
